fixed spacing issues (so the layout doesn't look horrible on smaller screens) and the comments resolve in line with the page being rendered (using the window.onload)

--- a/access.css
+++ b/access.css
@@ -57,7 +57,7 @@ textarea {
 	padding:10px;
 	border:1px solid black;
 	background:rgba(255, 255,255, 1);
-	margin-bottom: 20px;
+	margin: 0% 30% 5% 0%;
 	
 }
 
